alignment and minimal fix

--- a/ASP.NETCoreWebApplication/ClientApp/src/components/NavMenu/NavMenu.css
+++ b/ASP.NETCoreWebApplication/ClientApp/src/components/NavMenu/NavMenu.css
@@ -62,7 +62,7 @@ html {
 
 .background {
   height: auto;
-  width: 100vw;
+  /*width: 100vw;*/
   position: absolute;
   /* top: 0;
   left: 0; */
